--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-react": "^6.2.2",
     "firebase": "^3.4.0",
     "firebase-tools": "^3.0.7",
+    "jsdom": "^9.5.0",
+    "lodash": "^4.15.0",
     "mocha": "^3.0.2",
     "mocha-loader": "^1.0.0",
     "node-libs-browser": "^1.0.0",
