--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,5 @@
 {
   "projects": {
-    "default": "name of your specific firebase project goes here"
+    "default": " shoot-the-breeze-1be68"
   }
 }
