--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/turingschool-examples/shoot-the-breeze.git"
   },
-  "author": "Turing School",
+  "author": "Gabrielle Procell and Graham Nessler",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/turingschool-examples/shoot-the-breeze/issues"
