--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.15.0",
     "mocha": "^3.0.2",
     "mocha-loader": "^1.0.0",
+    "moment": "^2.15.1",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.10.0",
     "react": "^15.3.1",
@@ -52,5 +53,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.2"
+  },
+  "dependencies": {
+    "moment": "^2.15.1"
   }
 }
