changed package.json to match our repo

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/turingschool-examples/shoot-the-breeze.git"
+    "url": "git+https://github.com/gness1804/shoot-the-breeze"
   },
   "author": "Gabrielle Procell and Graham Nessler",
   "license": "MIT",
